# alma-de-colibri-django

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: urls.py
api/core/: serializers.py  urls.py  views.py
api/products/: serializers.py  urls.py  views.py
api/sales/: serializers.py  urls.py  views.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_city_address.py
products/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/base/: base.html  index.html
products/templates/products/: category_form.html  category_list.html  product_form.html  product_list.html
project/: custom_mixins.py  settings.py  urls.py
sales/: models.py
sales/migrations/: 0001_initial.py
templates/core/: index.html
